tests/paczka1/fuzzy1/56513248.err
Error in line 1: gJSqkGiXKb S415 52,2
Error in line 6: gJSqkGiXKb S530 20,1
Error in line 9: 81VNLjnR S399 33,2
Error in line 14: gJSqkGiXKb S530 36,3
